// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`menu render renders transformed items 1`] = `
<RefinementList
  canToggleShowMore={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "count": "ais-Menu-count",
      "disabledShowMore": "ais-Menu-showMore--disabled",
      "item": "ais-Menu-item",
      "label": "ais-Menu-label",
      "link": "ais-Menu-link",
      "list": "ais-Menu-list",
      "noRefinementRoot": "ais-Menu--noRefinement",
      "root": "ais-Menu",
      "selectedItem": "ais-Menu-item--selected",
      "showMore": "ais-Menu-showMore",
    }
  }
  depth={0}
  facetValues={
    Array [
      Object {
        "label": "foo",
        "transformed": true,
        "url": "#",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "transformed": true,
        "url": "#",
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\"><span class=\\"{{cssClasses.label}}\\">{{label}}</span><span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "showMoreActive": "Show less",
        "showMoreInactive": "Show more",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "item": false,
        "showMoreActive": false,
        "showMoreInactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;

exports[`menu render snapshot 1`] = `
<RefinementList
  canToggleShowMore={false}
  createURL={[Function]}
  cssClasses={
    Object {
      "count": "ais-Menu-count",
      "disabledShowMore": "ais-Menu-showMore--disabled",
      "item": "ais-Menu-item",
      "label": "ais-Menu-label",
      "link": "ais-Menu-link",
      "list": "ais-Menu-list",
      "noRefinementRoot": "ais-Menu--noRefinement",
      "root": "ais-Menu",
      "selectedItem": "ais-Menu-item--selected",
      "showMore": "ais-Menu-showMore",
    }
  }
  depth={0}
  facetValues={
    Array [
      Object {
        "label": "foo",
        "url": "#",
        "value": undefined,
      },
      Object {
        "label": "bar",
        "url": "#",
        "value": undefined,
      },
    ]
  }
  isShowingMore={false}
  showMore={false}
  templateProps={
    Object {
      "templates": Object {
        "item": "<a class=\\"{{cssClasses.link}}\\" href=\\"{{url}}\\"><span class=\\"{{cssClasses.label}}\\">{{label}}</span><span class=\\"{{cssClasses.count}}\\">{{#helpers.formatNumber}}{{count}}{{/helpers.formatNumber}}</span></a>",
        "showMoreActive": "Show less",
        "showMoreInactive": "Show more",
      },
      "templatesConfig": undefined,
      "useCustomCompileOptions": Object {
        "item": false,
        "showMoreActive": false,
        "showMoreInactive": false,
      },
    }
  }
  toggleRefinement={[Function]}
  toggleShowMore={[Function]}
/>
`;
